[tool.poetry]
name = "docker-fastbots"
version = "0.1.0"
description = "Docker image for running containerized fastbots projects."
authors = ["Davide <24529587+ubertidavide@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastbots = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
